# id32

./: CMakeLists.txt  LICENSE  README.md
include/: id32.h
src/: gf32.h  id32.c
tests/: tests.c
